Update to Gradle 3.3
Signed-off-by: djb77 <dwayne.bakewell@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
 #################
+## Gradle
+#################
+
+.gradle
+/build/
+gradle-app.setting
+!gradle-wrapper.jar
+.gradletasknamecache
+
+
+#################
 ## Eclipse
 #################
 
